--- a/src/components/global/HoverGradientButton/hover.css
+++ b/src/components/global/HoverGradientButton/hover.css
@@ -9,6 +9,8 @@
   position: relative;
   z-index: 0;
   border-radius: 10px;
+  font-family: "Jersey 15", serif;
+  font-size: 1.3rem;
 }
 
 .glow-on-hover:before {
