--- a/src/components/MainHero/StackOverflow.css
+++ b/src/components/MainHero/StackOverflow.css
@@ -39,10 +39,11 @@
 }
 
 .link {
-  color: #1e90ff;
+  color: #1e90ff !important;
   text-decoration: none;
   font-weight: bold;
-  transition: color 0.3s ease;
+  gap: 10px;
+  /* transition: color 0.3s ease; */
 }
 
 .link:hover {
