--- a/src/styles/HeroBanner.module.css
+++ b/src/styles/HeroBanner.module.css
@@ -99,6 +99,20 @@
   animation-delay: 1.8s;
 }
 
+.basicInfoText1 {
+  font-size: 2.5em;
+  font-weight: 600;
+  font-family: "Courier New", Courier, monospace;
+  padding-right: 20px;
+
+  /* width: 20%; */
+  text-align: left;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 0.8s ease-out forwards;
+  animation-delay: 1.8s;
+}
+
 /* Keyframes for Fade and Slide-Up Effect */
 @keyframes fadeInUp {
   from {
